--- a/README
+++ b/README
@@ -12,6 +12,8 @@ The production version is the one on CTAN and ACM sites.
 
 Changes
 
+Version 2.09.  Experimental tagging code is now in the main branch.
+
 Version 2.08.  Section titles are in lowercase now.
 	       Documentation updates.
 
