--- a/README
+++ b/README
@@ -13,6 +13,7 @@ The production version is the one on CTAN and ACM sites.
 Changes
 
 Version 2.09.  Experimental tagging code is now in the main branch.
+	       Creative Commons license is now allowed for all materials. 
 
 Version 2.08.  Section titles are in lowercase now.
 	       Documentation updates.
