--- a/acmart.dtx
+++ b/acmart.dtx
@@ -998,13 +998,7 @@
 %     by IW3C2, when some authors are approved Google employees.\\
 %     \texttt{cc} & Creative Commons license.  If this key is set,
 %     \textsl{doclicense} images are used to typeset the license. See
-%     also \cs{setcctype} command.  Note that at present this license
-%     can be used only either for \texttt{acmengage} format, or for
-%     \texttt{nonacm} publications, or for the authors that meet any
-%     of the following requirements: (a)~part of the ACM Open Program;
-%     (b)~publishing in a Gold Open Access publication;
-%     (c)~paying the Open Access APC;
-%     (d)~part of the Google publishing agreement.\\
+%     also \cs{setcctype} command.  \\
 %     \texttt{acmcopyright} & The authors transfer the copyright to the
 %     ACM.  This choice is no longer available for the
 %     non-commissioned authors and will trigger a warning.\\
@@ -2251,7 +2245,7 @@
 % At present this work is highly experimental.  You may try the
 % experiments by (1)~using the class |acmart-tagged| in the document
 % class line, and (2)~adding the command
-% \cs{DocumentMetadata}\marg{options} in the preamble, see the file
+% \cs{DocumentMetadata}\oarg{options} in the preamble, see the file
 % \path{sample-acmsmall-tagged.tex}.  If you do this, please \emph{do
 % not ask ACM for support}.  On the other hand, bug reports at
 % \url{https://github.com/borisveytsman/acmart/issues} will be
@@ -6042,29 +6036,9 @@
 %
 % \begin{macro}{\@ACM@copyright@check@cc}
 % \changes{v1.87}{2022/07/30}{Added macro}
-% At present cC licenses can be used only for acmengage format or for
-% non-acm stuff.  This macro checks whether the CC license is
-% applicable and generates an error if not.
 % \changes{v2.00}{2023/10/22}{Moved to warning}
-%    \begin{macrocode}
-\def\@ACM@copyright@check@cc{%
-  \if@ACM@nonacm
-     \ClassInfo{\@classname}{Using CC license with a non-acm
-       material}%
-  \else
-     \if@ACM@engage   
-        \ClassInfo{\@classname}{Using CC license with ACM Enage
-          material}%
-      \else
-      \ClassWarning{\@classname}{%
-        Sorry, Creative Commons licenses are\MessageBreak
-        currently not used with ACM publications\MessageBreak
-        typeset by the authors}{Please use nonacm 
-           option or ACM Engage class to enable CC licenses}%
-      \fi
-  \fi}
-%    \end{macrocode}
-% 
+% \changes{v2.09}{2024/08/25}{Deleted macro}
+% This macro is no longer needed due to the change in ACM policy.  
 % \end{macro}
 %
 % \begin{macro}{\@copyrightpermission}
@@ -6075,8 +6049,8 @@
 % \changes{v1.85}{2022/05/08}{Added CC licenses}
 % \changes{v1.87}{2022/07/30}{CC licenses now are allowed only for
 % non-acm or ACM engage publications}
-% \changes{v2.00}{2023/10/24}{Rewrote wording}
-% \changes{v2.00}{2023/10/24}{Rewrote wording}
+% \changes{v2.09}{2024/08/25}{Deleted checking whether CC licenses are
+% allowed}
 %   The canned permission block.
 %    \begin{macrocode}
 \def\@copyrightpermission{%
@@ -6207,7 +6181,6 @@
    disseminate the work on their personal and corporate Web sites with
    the appropriate attribution.
  \or % CC
-   \@ACM@copyright@check@cc
    \IfEq{\ACM@cc@type}{zero}{%
      \def\ACM@CC@Url{https://creativecommons.org/publicdomain/zero/1.0/legalcode}}{%
   \edef\ACM@CC@Url{https://creativecommons.org/licenses/\ACM@cc@type/\ACM@cc@version/legalcode}}%
